# pasori_timecard_v2

./: .gitignore  AGENTS.md  Cargo.toml  README.md  fixplan.md  package.json  pnpm-lock.yaml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/application/: attendance.rs  lineworks.rs  mod.rs
crates/core/src/application/lineworks/: tests.rs
crates/core/src/domain/: admin.rs  audit.rs  card.rs  employee.rs  mod.rs  punch.rs  request.rs  shift.rs  time.rs
crates/core/src/port/: mod.rs  notify.rs  policy.rs  reader.rs  repo.rs
crates/import_v1/: Cargo.toml
crates/import_v1/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: admin.rs  lib.rs  lineworks.rs  main.rs  terminal.rs  web_assets.rs
crates/server/src/admin/: attendance.rs  terminal_cards.rs  test_support.rs  tests.rs
crates/server/src/infra/: console_notify.rs  lineworks_notify.rs  mod.rs  sqlite.rs
crates/server/src/infra/sqlite/: repos.rs  tests.rs
crates/terminal/: Cargo.toml  tauri.conf.json
crates/terminal/capabilities/: main.json
crates/terminal/permissions/: main.toml
crates/terminal/src/: api_client.rs  card_binding.rs  clock.rs  logging.rs  main.rs  offline.rs  punch.rs  reader.rs
crates/terminal/src/rcs380/: chipset.rs  frame.rs  mod.rs  transport.rs
docs/: glossary.md
docs/adr/: 0001-tech-stack.md  0002-architecture-c-plan.md  0003-mvp-scope.md  0004-tdd-twada.md  0005-lineworks-full-mvp.md  0006-project-structure.md  0007-timezone-asia-tokyo.md  0008-pre-implementation-doc-clarifications.md  0009-test-name-language-policy.md  0010-cutoff-rule.md  0011-rcs380-rusb-backend.md  0012-rcs380-macos-usb-protocol-issue.md  0013-verification-doc-location.md  0014-mvp-terminal-card-binding.md  0015-policy-profile-and-derived-attendance.md  0016-legacy-attendance-policy-presets.md
docs/archive/: 2026-04-21-bitwarden-lineworks-setup-runbook.md  2026-04-21-lineworks-official-source-check.md  2026-05-19-admin-terminal-integration-fixplan.md  2026-05-19-pre-implementation-questions.md  chatgpt.md  rcs380-connection-fix-plan.md  usb_diag.py
docs/research/: 2026-05-20-attendance-policy-deep-dive.md  2026-05-20-common-attendance-policy-taxonomy.md  2026-05-20-oss-public-attendance-policy-survey.md  2026-05-20-policy-interview-01.md  2026-05-20-policy-questionnaire-draft.md  2026-05-20-timesheet-policy-research.md
docs/spec/: 01_nfc_and_punch.md  02_attendance.md  03_shift.md  04_lineworks.md  05_audit_and_backup.md  06_data_model.md  07_security.md  08_rcs380_rusb_driver.md  overview.md
docs/verification/: README.md  e2e-manual-checklist.md
migrations/: 20260416000000_initial_schema.sql  20260417000001_seed_test_data.sql  20260420000100_admin_lockout_and_session_activity.sql  20260422000000_normalize_seed_test_data_timezone.sql  20260425000000_audit_log_immutable_triggers.sql  20260428000000_admin_session_random_token.sql  20260429000000_audit_log_hash_chain.sql
scripts/: bw-run-server.sh  bw-run-terminal.sh
scripts/lib/: bw-env.sh
web/admin/: package.json  vite.config.ts
web/admin/src/: App.test.tsx  App.tsx  components.tsx  formatters.ts  index.css  types.ts
web/terminal/: index.html  package.json  wdio.conf.ts
web/terminal/e2e/: playwright.config.ts  terminal-happy-path.e2e.ts  terminal-happy-path.playwright.ts
web/terminal/src/: App.test.tsx  App.tsx  e2eMocks.ts  index.css
