[workspace]
members = ["crates/core", "crates/terminal", "crates/server", "crates/import_v1"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
argon2 = "0.5"
base64 = "0.22"
axum = "0.7"
hmac = "0.12"
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
subtle = "2"
tower = "0.5"
uuid = { version = "1", features = ["v7", "serde"] }
