[workspace]
members = ["crates/core", "crates/terminal", "crates/server", "crates/import_v1"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
argon2 = "0.5"
base64 = "0.22"
axum = "0.7"
hmac = "0.12"
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
subtle = "2"
tower = "0.5"
pcsc = "2"
uuid = { version = "1", features = ["v7", "serde"] }
rusb = "0.9"
tauri = "2"
tauri-build = "2"
tauri-specta = "2.0.0-rc.20"
