[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
hmac.workspace = true
pasori-core = { path = "../core" }
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
