[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
hmac.workspace = true
jiff.workspace = true
pasori-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
