[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["macros"] }
base64.workspace = true
hmac.workspace = true
jiff.workspace = true
pasori-core = { path = "../core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
