[package]
name = "terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
jiff.workspace = true
pasori-core = { path = "../core" }
pcsc.workspace = true
rusb.workspace = true
thiserror = "2"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
