[package]
name = "terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
jiff.workspace = true
pasori-core = { path = "../core" }
pcsc.workspace = true
rusb.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "2"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tauri-specta.workspace = true
uuid.workspace = true

[build-dependencies]
tauri-build.workspace = true
